# WFiIS-2019-PSiC

./: .gitignore  CMakeLists.txt
Lab01/: CMakeLists.txt
Lab01/client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
Lab01/server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
Lab02/: CMakeLists.txt  main.cpp  server.hpp
Lab03/: CMakeLists.txt  Makefile  main.cpp
Lab03/TCP/: server.cpp  server.hpp
Lab03/Utils/: get_content_type.hpp  get_date.cpp  get_date.hpp  http_error_responses.hpp  read_file.hpp  split_string.cpp  split_string.hpp
Lab04/: 3.sh  4.sh  CMakeLists.txt  main.cpp  stack.cpp
Lab05/: CMakeLists.txt
Lab05/client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
Lab05/server/: CMakeLists.txt  main.cpp  send_unreliable.h  server.cpp  server.hpp
Lab06/: CMakeLists.txt  main.cpp
Lab06/HTTP/: handler.cpp  handler.hpp
Lab06/TCP/: server.cpp  server.hpp
Lab06/Utils/: get_content_type.cpp  http_error_responses.cpp  parse_headers.cpp  parse_headers.hpp  read_file.cpp
Lab07/: CMakeLists.txt
Lab07/client/: CMakeLists.txt  main.cpp
Lab07/server/: CMakeLists.txt  main.cpp
